src/test/error/set.lns
{
   let set = (@ "1", "2", "3", "4" );
   forsort val in set {
      let val1:int = val; // error
   }
}
{
   let set = (@ "1", "2", "3", "4" );
   print( set[ "1" ] ); // error
}
{
   let mut set = (@ "1", "2", "3", "4" );
   if! let val = set.has( "1" ) {
      print( val .. "1" ); // error
   }
   set.add( 1 ); // error
   set.del( 1 ); // error
}
{
   fn func( set:Set<int> ) {
      print( set.has( 1 ) );
   }
   func( (@ 1, 2, 3, "a" ) ); // error
}
{
   fn func( set:Set<int,int> ) { // error
      print( set.has( 1 ) );
   }
}
{
   let set = (@ 1, 2, 3 );
   set.or( set ); // error
   set.and( set ); // error
   set.sub( set ); // error
   set.clone();
   set.len();
}
{
   let mut set = (@ 1, 2, 3 );
   let mut set2 = (@ "1", "2", "3" );
   set2.or( set );  // error
   set2.and( set ); // error
   set2.sub( set ); // error
}
{
   let set:Set<int>! = nil;
   if set$.has( 1 ) { // error
      print( "" );
   }
}
